Add nav and flex container

--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <title>My Times</title>
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
+
   <body>
+    <!-- Header -->
+    <div class="header">
+      <div class="container">
+        <!-- logo image -->
+        <img src="images/img-myt-logo.jpg">
+        <!-- nav -->
+        <ul>
+          <li>World</li>
+          <li>U.S.</li>
+          <li>Tech</li>
+          <li>Science</li>
+        </ul>
+      </div>
+    </div>
+
+
 
   </body>
 </html>
