--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
   </head>
 
   <body>
-    <!-- Header -->
+
+    <!-- Header Section -->
     <div class="header">
-      <div class="container">
-        <!-- logo image -->
+      <div class="logo">
+      <!-- logo image -->
         <img src="images/img-myt-logo.jpg">
-        <!-- nav -->
-        <ul>
-          <li>World</li>
-          <li>U.S.</li>
-          <li>Tech</li>
-          <li>Science</li>
-        </ul>
+        <span>My Times</span>
       </div>
+
+
+    <!-- Navigation Section -->
+      <nav>
+        <span>
+          <a href="#">World</a>
+        </span>
+        <span>
+          <a href="#">U.S.</a>
+        </span>
+        <span>
+          <a href="#">Tech</a>
+        </span>
+        <span>
+          <a href="#">Science</a>
+        </span>
+      </nav>
     </div>
 
 
