--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>My Times</title>
-    <link href-"style.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
     <!--Header Section -->
     <header>
-      <div class="header">
-        <div class="logo">
-          <img src="images/img-myt-logo.jpg">
-        </div>
-        <span>My Times</span>
-      </div>
-      <nav>
-        <span><a href="#">World</a></span>
-        <span><a href="#">U.S.</a></span>
-        <span><a href="#">Tech</a></span>
-        <span><a href="#">Science</a></span>
-      </nav>
-    </header>
+     <div class="logo">
+       <img src="images/img-myt-logo.jpg">
+       <span>My Times</span>
+     </div>
+
+     <!--  Navigation Section  -->
+     <nav>
+     	<span><a href="#">World</a></span>
+     	<span><a href="#">U.S.</a></span>
+     	<span><a href="#">Tech</a></span>
+     	<span><a href="#">Science</a></span>
+     </nav>
+   </header>
 
   </body>
 </html>
