Try to get the columns

--- a/index.html
+++ b/index.html
@@ -23,5 +23,22 @@
      </nav>
    </header>
 
+   <!-- Main Content -->
+   <div class="main">
+
+     <!-- First Column  -->
+     <div class="column large">
+       <div class="top story">
+         <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+       </div>
+     </div>
+
+     <!--  Second Column  -->
+     <div class="column medium"></div>
+
+     <!--  Third Column  -->
+     <div class="column small"></div>
+   </div>
+
   </body>
 </html>
