--- a/index.html
+++ b/index.html
@@ -101,5 +101,25 @@
      </div>
    </div>
 
+     <!-- Footer -->
+     <footer>
+       <div class="footer">
+         <div class="footer-content">
+           <div class="mytimes">
+             <span>MY Times</span>
+           </div>
+           <nav class="fn">
+         	   <span class="footnav"><a href="#">World</a></span>
+         	   <span class="footnav"><a href="#">U.S.</a></span>
+         	   <span class="footnav"><a href="#">Tech</a></span>
+         	   <span class="footnav"><a href="#">Science</a></span>
+           </nav>
+         </div>
+           <div class="copyright">
+             <span class="end">© 2016, My Times (A Division of Codecademy bite)</span>
+           </div>
+         </div>
+       </div>
+     </footer>
   </body>
 </html>
